--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./CSS.Style/style.css">
+    <title>Personal Portfolio Website</title>
 </head>
 <body>
-    
+    <div class="hero">
+        <nav>
+            <img src="./Images/logo.png" class="logo">
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT ME</a></li>
+                <li><a href="#">PROJECTS</a></li>
+                <li><a href="#">PORTFOLIO</a></li>
+                <li><a href="#">HIRE ME</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
