--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">ABOUT ME</a></li>
-                <li><a href="#">PROJECTS</a></li>
+                <li><a href="#">SERVICES</a></li>
                 <li><a href="#">PORTFOLIO</a></li>
                 <li><a href="#">HIRE ME</a></li>
             </ul>
