Added home, about, portfolio, contact & feedback page

--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS.Style/style.css">
-    <title>Personal Portfolio Website</title>
+    <title>Portfolio</title>
 </head>
 <body>
-    <div class="hero">
-        <nav>
-            <img src="./Images/logo.png" class="logo">
+    <nav>
+        <div class="menu">
+            <div class="logo">
+                <a href="#">TechWise</a>
+            </div>
             <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT ME</a></li>
-                <li><a href="#">SERVICES</a></li>
-                <li><a href="#">PORTFOLIO</a></li>
-                <li><a href="#">HIRE ME</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contacts.html">Contacts</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
             </ul>
-        </nav>
-    </div>
+        </div>
+   
 </body>
 </html>
