--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </div>
-   
+        <div class="img"></div>
+        <div class="center">
+            <div class="title">Hi, I'm <span>Aaron Ekal</span></div>
+            <div class="sub_title">A Web Dev Student at Moringa School</div>
+            
+        </div>
 </body>
 </html>
