added two buttons. Learn more & subscribe

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <div class="center">
             <div class="title">Hi, I'm <span>Aaron Ekal</span></div>
             <div class="sub_title">A Web Dev Student at Moringa School</div>
-            
+            <div class="btns">
+                <button><a href="https://twitter.com/AaronEkal">Learn More</button>
+                <button>Subscribe </button>
+            </div>
         </div>
 </body>
 </html>
