--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </div>
-        <div class="img"></div>
-        <div class="center">
-            <div class="title">Hi, I'm <span>Aaron Ekal</span></div>
-            <div class="sub_title">A Web Dev Student at Moringa School</div>
-            <div class="btns">
-                <button><a href="https://twitter.com/AaronEkal">Learn More</button>
-                <button>Subscribe </button>
-            </div>
+    </nav>
+    <div class="img"></div>
+    <div class="center">
+        <div class="title">Hi, I'm <span>Aaron Ekal</span></div>
+        <div class="sub_title">A Web Dev Student at Moringa School</div>
+        <div class="btns">
+            <button><a href="https://twitter.com/AaronEkal">Learn More</button>
+            <button>Subscribe </button>
         </div>
+    </div>
 </body>
 </html>
