added description of about me section

--- a/about.html
+++ b/about.html
@@ -25,7 +25,25 @@
         </div>
     </nav>
     <div class="img"></div>
-    
+    <div class="cent">
+        <div class="heady">
+            <h2>About Me</h2>
+        </div>
+        <div class="sub_heady">Aaron Ekal is a down to earth and a loving human being. His background in computer and
+            playing videogames is the thriving force that steered him to start coding. The fact that anyone can code and
+            that it's not for the chosen few is what drives him to click one button at a time every single day. <br>
+
+            Ekal's hunger for knowledge and determination to turn hardwork into action contributed to him being an
+            Employee of the month five consecutive months in VIVO Smartphone Kenya, where he led a group of 18 promoters
+            to achieve their monthly sales target and thus beating competitors such as Oppo, Samsung, techno and Infinix
+            in his region. Morever, he vastly improved the productivity of his team by implementing strategic key
+            selling methods and ensuring a work-life balance in his work <br>
+
+            Ekal believes mindfulness in the workplace is key to success - a tenet he lives out through his interests in
+            Coding,
+            playing basketball, gardening, and solving problems. Ekal is currently learning web development at Moringa
+            school because he wants to achieve his long awaited career in tech as a Software Developer!.</div>
+    </div>
 </body>
 
 </html>
