added social media icons

--- a/contacts.html
+++ b/contacts.html
@@ -25,3 +25,40 @@
             </ul>
         </div>
     </nav>
+    <div class="social-icons">
+        <a href="#" class="social-icon twitter">
+            <span class="icon_inner">
+                <i class="fa fa-twitter"></i>
+            </span>
+        </a>
+        <a href="#" class="social-icon linkedin">
+            <span class="icon_inner">
+                <i class="fa fa-linkedin"></i>
+            </span>
+        </a>
+        <a href="#" class="social-icon github">
+            <span class="icon_inner">
+                <i class="fa fa-github"></i>
+            </span>
+        </a>
+        <a href="#" class="social-icon instagram">
+            <span class="icon_inner">
+                <i class="fa fa-instagram"></i>
+            </span>
+        </a>
+        <a href="#" class="social-icon facebook">
+            <span class="icon_inner">
+                <i class="fa fa-facebook-f"></i>
+            </span>
+        </a>
+        <a href="#" class="social-icon whatsapp">
+            <span class="icon_inner">
+                <i class="fa fa-whatsapp"></i>
+            </span>
+        </a>
+        <a href="#" class="social-icon gmail">
+            <span class="icon_inner">
+                <i class="fa fa-envelope"></i>
+            </span>
+        </a>
+    </div>
