added live links to icons for reredirects

--- a/contacts.html
+++ b/contacts.html
@@ -26,37 +26,37 @@
         </div>
     </nav>
     <div class="social-icons">
-        <a href="#" class="social-icon twitter">
+        <a href="https://twitter.com/AaronEkal" class="social-icon twitter">
             <span class="icon_inner">
                 <i class="fa fa-twitter"></i>
             </span>
         </a>
-        <a href="#" class="social-icon linkedin">
+        <a href="https://www.linkedin.com/in/aaron-ekal-277699184/" class="social-icon linkedin">
             <span class="icon_inner">
                 <i class="fa fa-linkedin"></i>
             </span>
         </a>
-        <a href="#" class="social-icon github">
+        <a href="https://github.com/Aaron-Ekal" class="social-icon github">
             <span class="icon_inner">
                 <i class="fa fa-github"></i>
             </span>
         </a>
-        <a href="#" class="social-icon instagram">
+        <a href="https://www.instagram.com/" class="social-icon instagram">
             <span class="icon_inner">
                 <i class="fa fa-instagram"></i>
             </span>
         </a>
-        <a href="#" class="social-icon facebook">
+        <a href="https://www.facebook.com/" class="social-icon facebook">
             <span class="icon_inner">
                 <i class="fa fa-facebook-f"></i>
             </span>
         </a>
-        <a href="#" class="social-icon whatsapp">
+        <a href="https://www.whatsapp.com/" class="social-icon whatsapp">
             <span class="icon_inner">
                 <i class="fa fa-whatsapp"></i>
             </span>
         </a>
-        <a href="#" class="social-icon gmail">
+        <a href="https://www.gmail.com" class="social-icon gmail">
             <span class="icon_inner">
                 <i class="fa fa-envelope"></i>
             </span>
