--- a/feedback.html
+++ b/feedback.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
     <div class="container">
-        <h1>Let me get your views. I love feedback</h1>
+        <p><h1>Let me get your views. I love feedback</p></h1>
         <div class="content-box">
             <div class="contact-left">
                 <h3>Send Your Views</h3>
