added cstyles.cc, modified projects file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="contacts.html">Contacts</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
@@ -27,7 +27,7 @@
         <div class="title">Hi, I'm <span>Aaron Ekal</span></div>
         <div class="sub_title">A Web Dev Student at Moringa School</div>
         <div class="btns">
-            <button><a href="https://twitter.com/AaronEkal">Learn More</button>
+            <button><a href="https://twitter.com/AaronEkal" target="_blank" rel="noopener noreferrer">Learn More</button>
             <button>Subscribe </button>
         </div>
     </div>
