--- a/feedback.html
+++ b/feedback.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="contacts.html">Contacts</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
@@ -47,7 +47,7 @@
                         </div>
                         <div class="input-group">
                             <label>Subject</label>
-                            <input type="text" placeholder="+Product Demo">
+                            <input type="text" placeholder="Product Demo">
                         </div>
                     </div>
     
