added _blank link to projects file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="title">Hi, I'm <span>Aaron Ekal</span></div>
         <div class="sub_title">A Web Dev Student at Moringa School</div>
         <div class="btns">
-            <button><a href="https://twitter.com/AaronEkal" target="_blank" rel="noopener noreferrer">Learn More</button>
+            <button><a href="https://www.linkedin.com/in/aaron-ekal-277699184/" target="_blank" rel="noopener noreferrer">Learn More</button>
             <button>Subscribe </button>
         </div>
     </div>
