--- a/projects.html
+++ b/projects.html
@@ -27,32 +27,32 @@
     <section id="projects">
         <div class="projects container">
             <div class="project-headers">
-                <h1 class="section-title">Recent <span>Projects</span></h1>
+                <h1 class="section-title"><span>Recent Projects</span></h1>
             </div>
             <ol>
                 <li><div class="projects-info">
                 <h1>Project 1</h1>
                 <h2>Creating my first ever Hello World Repo</h2>
-                <p>The project was on how to write code in HTML and push it to a remote repository from my local machine.<a href="https://www.youtube.com/watch?v=ZFQkb26UD1Y" target="_blank" rel="noopener noreferrer">Project Link</a></p>
+                <p>The project was on how to write code in HTML and push it to a remote repository from my local machine.<a href="https://github.com/Aaron-Ekal/hello-world" target="_blank" rel="noopener noreferrer">Project Link</a></p>
             </div>
                 </li>
             
                 <li><div class="projects-info">
                 <h1>Project 2</h1>
                 <h2>Pushing a photo to Github</h2>
-                <p>I was experimenting on whether I can get a photo from my local machine to somewhere remotely and still be able to access it. <br> I used the terminal to achieve this.<a href="https://www.youtube.com/watch?v=ZFQkb26UD1Y" target="_blank" rel="noopener noreferrer">Project Link</a></it></p>
+                <p>I was experimenting on whether I can get a photo from my local machine to somewhere remotely and still be able to access it. <br> I used the terminal to achieve this.<a href="https://github.com/Aaron-Ekal/Man-of-steel" target="_blank" rel="noopener noreferrer">Project Link</a></it></p>
             </div>
                 </li>
                 <li><div class="projects-info">
                 <h1>Project 3</h1>
                 <h2>Collaborating on Github Projects</h2>
-                <p>I was able to work remotely on my peer remotely. We were working on a resort website. <br> I created activities page and pushed it to github from my branch and we managed to merge them. <br>Language used here is HTML and CSS.  <a href="https://www.youtube.com/watch?v=ZFQkb26UD1Y" target="_blank" rel="noopener noreferrer">Project Link</a></p>
+                <p>I was able to work remotely on my peer remotely. We were working on a resort website. <br> I created activities page and pushed it to github from my branch and we managed to merge them. <br>Language used here is HTML and CSS.  <a href="https://github.com/Aaron-Ekal/coffee-website" target="_blank" rel="noopener noreferrer">Click here to see the Project Link</a></p>
             </div>
                 </li>
                 <li><div class="projects-info">
                 <h1>Project 4</h1>
                 <h2>Cloned a repo</h2>
-                <p>Managed to get repos and the knowhow to clone.<a href="https://www.youtube.com/watch?v=ZFQkb26UD1Y" target="_blank" rel="noopener noreferrer">Project Link</a></p>
+                <p>Managed to get repos and the knowhow to clone.<a href="https://github.com/Aaron-Ekal/cookie-recipe" target="_blank" rel="noopener noreferrer">Project Link</a></p>
             </div>
                 </li>
             </ol>
